egress-wiremock.yml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: wiremock
spec:
  hosts:
    - host.docker.internal
  ports:
    - number: 8008
      name: http
      protocol: HTTP
  resolution: DNS
  location: MESH_EXTERNAL
