egress.yml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: wiremock
spec:
  hosts:
    - host.docker.internal
  ports:
    - number: 8008
      name: http
      protocol: HTTP
  resolution: DNS
  location: MESH_EXTERNAL
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: httpbin
spec:
  hosts:
    - httpbin.org
  ports:
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
    - httpbin.org
  tls:
    - match:
        - port: 443
          sni_hosts:
            - httpbin.org
      route:
        - destination:
            host: httpbin.org
            port:
              number: 443
          weight: 100
